fix text overflow

--- a/projects/kbtv-client/src/app/feature-modules/request-log/request-log/request-log.component.scss
+++ b/projects/kbtv-client/src/app/feature-modules/request-log/request-log/request-log.component.scss
@@ -1,8 +1,7 @@
 ::ng-deep .request-log-container {
   .list-item-content {
     white-space: normal;
-    overflow: auto;
-    text-overflow: none;
+    word-break: break-word;
   }
   .completed-requests-button {
       width: 100%;
